syntax = "proto3";

package ether_service;

service EtherService {
    rpc Greet(GreetRequest) returns (GreetResponse);
}

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string message = 1;
}
